# intergalactic-teacher

./: .gitignore  CLAUDE.md  Makefile  SSE_IMPLEMENTATION.md  SSE_IMPLEMENTATION_SUMMARY.md  test-auto-login.html  test-integration.js  test_api_suggestions.py  test_contextual_suggestions.py
backend/: .env  .env.example  Dockerfile  Makefile  README.md  STREAMING_COMPLETE.md  STREAMING_IMPLEMENTATION.md  STREAMING_IMPLEMENTATION_GUIDE.md  STREAMING_QUICK_REFERENCE.md  STREAMING_SUMMARY.md  alembic.ini  check_api_status.py  docker-compose.yml  pyproject.toml  rebuild_api.sh  requirements-simple.txt  requirements.txt  run_docker.sh  simple_backend.py  test_api.py  test_backend.py  test_endpoint.py  test_enhanced_previous_chapters.py  test_frontend_flow.py  test_main.py  test_ollama.py  test_optimized_workflow.py  test_previous_chapters_debug.py  test_story_api.py  test_streaming.py
backend/alembic/versions/: remove_stories_content_column.py
backend/app/: __init__.py  main.py
backend/app/api/api_v1/: api.py
backend/app/api/api_v1/endpoints/: analytics.py  auth.py  children.py  stories.py  users.py
backend/app/core/: config.py  dependencies.py  logging.py  middleware.py  security.py
backend/app/db/: base.py
backend/app/models/: __init__.py  child.py  story.py  story_chapter.py  story_session.py  user.py  user_analytics.py
backend/app/schemas/: analytics.py  child.py  story.py  story_session.py  user.py
backend/app/services/: analytics_service.py  child_service.py  story_service.py  story_session_service.py  user_service.py
backend/app/utils/: redis_client.py  sse_formatter.py
backend/app/workflows/: __init__.py  content_safety.py  story_generation.py
backend/migrations/: env.py
backend/migrations/versions/: 0d1291b6e455_initial_migration_with_all_tables.py  179400ee2fd3_rename_full_name_to_name.py  7b518bd04911_initial_migration.py  99cc13666ebc_add_story_chapters_table.py
backend/scripts/: clean_stories.sql  init_db.sql  migrate_stories_to_chapters.py  setup.py
backend/tests/: test_main.py
frontend/: .env  .prettierignore  README.md  package-lock.json  package.json  tailwind.config.js
product/: README.md  (+1 more)
(+53 files in other folders)
